Fix spacing of search bar on interior pages

--- a/app/assets/stylesheets/unc_custom.css.scss
+++ b/app/assets/stylesheets/unc_custom.css.scss
@@ -933,10 +933,6 @@ li {
   .nav > li > a {
     padding: 10px;
   }
-
-  ul.navbar-nav {
-    margin: 8px auto;
-  }
 }
 
 
